--- a/app/views/issues/_operation.html.haml
+++ b/app/views/issues/_operation.html.haml
@@ -2,17 +2,19 @@
   - if !@task.nil?
     = label_tag t('issue.issue_source')
     %br
-    = radio_button_tag 'issue_source', 'worker'
-    = label_tag t('issue.source_worker')
-    = check_box_tag 'retrun_point'
-    = label_tag t('issue.return_point')
-    %br
-    = radio_button_tag 'issue_source', 'user', true
-    = label_tag t('issue.source_user')
-    %br
-    = check_box_tag 'penalty'
-    = label_tag t('issue.extra_penalty')
-    = number_field_tag 'penalty_value', 1, :in => 1..10
+    .solidshape
+      = radio_button_tag 'issue_source', 'worker'
+      = label_tag t('issue.source_worker')
+      %br
+      = radio_button_tag 'issue_source', 'user', true
+      = label_tag t('issue.source_user')
+    .solidshape
+      = check_box_tag 'return_point'
+      = label_tag t('issue.return_point')
+      %br
+      = check_box_tag 'penalty'
+      = label_tag t('issue.extra_penalty')
+      = number_field_tag 'penalty_value', 1, :in => 1..10
     %br
   = label_tag t('issue.memo')
   %br
