--- a/app/views/issues/_task.html.haml
+++ b/app/views/issues/_task.html.haml
@@ -1,9 +1,22 @@
-= t 'issue.issue_type'
-- unless @task.nil?
-  = "Task"
-  %ul
-    %li= link_to @task.title, @task
-    %li= @task.link
-    %li= @task.price
-    %li= @task.user.username
-%hr
+.bordershape
+  = t 'issue.issue_type'
+  - unless @task.nil?
+    = "Task"
+    %ul
+      %li
+        = t 'formtastic.labels.task.title' + ': '
+        = link_to @task.title, @task
+      %li
+        URL:
+        = link_to @task.link, @task.link
+      %li
+        = t 'formtastic.labels.task.price' + ': '
+        = @task.price
+      %li
+        = t 'task.worker' + ': '
+        - if admin? and @task.user
+          = link_to @task.user.username, @task.user
+          = @task.worker_part_name if @task.worker_part_name
+        - else
+          = @task.worker_part_name if @task.worker_part_name
+
