--- a/app/views/issues/edit.html.haml
+++ b/app/views/issues/edit.html.haml
@@ -1,5 +1,8 @@
+#roundshape
+  = link_to t('global.show'), @issue
+  |
+  \#{link_to t('global.back'), issues_path}
+
 = render 'task'
+
 = render 'form'
-= link_to t('global.show'), @issue
-|
-\#{link_to t('global.back'), issues_path}
