--- a/app/views/users/_head.html.haml
+++ b/app/views/users/_head.html.haml
@@ -9,11 +9,11 @@
     \|
     = link_to t('site.my_participants'), :controller=>'account', :action=>'participant', :id=>@user
     \|
-    = link_to t('account.charge'), :controller=>'account', :action=>'charge_log', :id=>@user
+    = link_to t('account.charge_log'), :controller=>'account', :action=>'charge_log', :id=>@user
     \|
-    = link_to t('site.small_cash'), :controller=>'account', :action=>'small_cash', :id=>@user
+    = link_to t('account.small_cash_log'), :controller=>'account', :action=>'small_cash', :id=>@user
     \|
-    = link_to t('site.big_cash'), :controller=>'account', :action=>'big_cash', :id=>@user
+    = link_to t('account.big_cash_log'), :controller=>'account', :action=>'big_cash', :id=>@user
     \|
     = link_to t('account.trade_log'), :controller=>'account', :action=>'trade_log', :id=>@user
     \|
