--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -106,6 +106,7 @@
         %th=t 'task.level'
         %th=t 'task.work_day'
         %th=t 'task.extra'
+        %th=t 'formtastic.labels.task.avoid_day'
         %th=t 'formtastic.labels.task.published_time'
         %th=t 'global.operation'
 
@@ -126,22 +127,23 @@
           = task.task_day 
           = t 'task.finish_left', :day=>"#{task.task_day - (Time.now.day - task.transport_time.day)}" if task.transport_time and task.transport?
         %td= convert_yes_no(task.custom_judge)
+        %td= task.avoid_day
         %td= (distance_of_time_in_words task.published_time, Time.now) + t('global.before')
         %td
-          = link_to image_tag('view.png'), task, {:id=>'tip', :title=>t('global.show')}
-          - if task.can_modify? and task.user == current_user
-            = link_to image_tag('edit.png'), edit_task_url(task), {:id=>'tip', :title=>t('global.edit')}
-            = link_to image_tag('delete.png'), task, {:confirm => t('site.are_you_sure'), :method => :delete, :id=>'tip', :title=>t('global.delete')}
           - if task.user == current_user
+            - if task.can_modify?
+              = link_to image_tag('edit.png'), edit_task_url(task), {:id=>'tip', :title=>t('global.edit')}
+              = link_to image_tag('delete.png'), task, {:confirm => t('site.are_you_sure'), :method => :delete, :id=>'tip', :title=>t('global.delete')}
             = link_to image_tag('price.png',:alt=>t('task.price')), {:controller=>'board', :action=>'price_task', :id=>task}, {:confirm => t('task.q_price'), :id=>'tip',:title=>t('task.price')} if task.can_pricing?
             = link_to image_tag('truck.png', :alt=>t('task.transport')), {:controller=>'board', :action=>'send_good', :id=>task}, {:confirm => t('task.q_transport'), :id => 'tip', :title=>t('task.transport')} if task.can_trans?
             = link_to image_tag('yes.png', :alt=>t('task.confirm')), {:controller=>'board', :action=>'confirm_task', :id=>task}, {:confirm => t('task.q_confirm'), :id => 'tip', :title=>t('task.confirm')} if task.can_over?
-          - else
+          - if task.worker == current_user
             = link_to image_tag('do.png',:alt=>t('task.do')), {:controller=>'board', :action=>'do_task', :id=>task}, {:confirm => t('task.q_do'), :id=>'tip',:title=>t('task.do')} if task.can_takeover?
             = link_to image_tag('pay.png', :alt=>t('task.pay')), {:controller=>'board', :action=>'pay_task', :id=>task}, {:confirm => t('task.q_pay'), :id=>'tip',:title=>t('task.pay')} if task.can_pay?
-            = link_to image_tag('finish.png', :alt=>t('task.finish')), {:controller=>'board', :action=>'finish_task', :id=>task}, {:confirm => t('task.q_finish'), :id=>'tip',:title=>t('task.finish')} if task.can_finish? and task.worker == current_user
+            = link_to image_tag('finish.png', :alt=>t('task.finish')), {:controller=>'board', :action=>'finish_task', :id=>task}, {:confirm => t('task.q_finish'), :id=>'tip',:title=>t('task.finish')} if task.can_finish?
 
           - if task.user == current_user or task.worker == current_user
+            = link_to image_tag('view.png'), task, {:id=>'tip', :title=>t('global.show')}
             = link_to image_tag('quest.png', :alt=>t('task.send_problem')), {:controller=>'board', :action=>'argue_task', :id=>task}, {:confirm => t('task.q_argue'), :id=>'tip',:title=>t('task.send_problem')} if task.can_argue?
 
   = will_paginate @tasks
@@ -177,20 +179,20 @@
           = t('task.extra') if task.custom_judge
         %td= (distance_of_time_in_words task.published_time, Time.now) + t('global.before')
         %td
-          = link_to image_tag('view.png'), task, {:id=>'tip', :title=>t('global.show')}
-          - if task.can_modify? and task.user == current_user
-            = link_to image_tag('edit.png'), edit_task_url(task), {:id=>'tip', :title=>t('global.edit')}
-            = link_to image_tag('delete.png'), task, {:confirm => t('site.are_you_sure'), :method => :delete, :id=>'tip', :title=>t('global.delete')}
           - if task.user == current_user
+            - if task.can_modify?
+              = link_to image_tag('edit.png'), edit_task_url(task), {:id=>'tip', :title=>t('global.edit')}
+              = link_to image_tag('delete.png'), task, {:confirm => t('site.are_you_sure'), :method => :delete, :id=>'tip', :title=>t('global.delete')}
             = link_to image_tag('price.png',:alt=>t('task.price')), {:controller=>'board', :action=>'price_task', :id=>task}, {:confirm => t('task.q_price'), :id=>'tip',:title=>t('task.price')} if task.can_pricing?
             = link_to image_tag('truck.png', :alt=>t('task.transport')), {:controller=>'board', :action=>'send_good', :id=>task}, {:confirm => t('task.q_transport'), :id => 'tip', :title=>t('task.transport')} if task.can_trans?
             = link_to image_tag('yes.png', :alt=>t('task.confirm')), {:controller=>'board', :action=>'confirm_task', :id=>task}, {:confirm => t('task.q_confirm'), :id => 'tip', :title=>t('task.confirm')} if task.can_over?
-          - else
+          - if task.worker == current_user
             = link_to image_tag('do.png',:alt=>t('task.do')), {:controller=>'board', :action=>'do_task', :id=>task}, {:confirm => t('task.q_do'), :id=>'tip',:title=>t('task.do')} if task.can_takeover?
             = link_to image_tag('pay.png', :alt=>t('task.pay')), {:controller=>'board', :action=>'pay_task', :id=>task}, {:confirm => t('task.q_pay'), :id=>'tip',:title=>t('task.pay')} if task.can_pay?
-            = link_to image_tag('finish.png', :alt=>t('task.finish')), {:controller=>'board', :action=>'finish_task', :id=>task}, {:confirm => t('task.q_finish'), :id=>'tip',:title=>t('task.finish')} if task.can_finish? and task.worker == current_user
+            = link_to image_tag('finish.png', :alt=>t('task.finish')), {:controller=>'board', :action=>'finish_task', :id=>task}, {:confirm => t('task.q_finish'), :id=>'tip',:title=>t('task.finish')} if task.can_finish?
 
           - if task.user == current_user or task.worker == current_user
+            = link_to image_tag('view.png'), task, {:id=>'tip', :title=>t('global.show')}
             = link_to image_tag('quest.png', :alt=>t('task.send_problem')), {:controller=>'board', :action=>'argue_task', :id=>task}, {:confirm => t('task.q_argue'), :id=>'tip',:title=>t('task.send_problem')} if task.can_argue?
 
   = will_paginate @tasks
