--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -125,7 +125,12 @@
         %td= task.worker_level
         %td
           = task.task_day 
-          = t 'task.finish_left', :day=>"#{task.task_day - (Time.now.day - task.transport_time.day)}" if task.transport_time and task.transport?
+          - if task.transport_time and task.transport?
+            - if Time.now.month - task.transport_time.month > 0
+              - day = Time.now.day + task.transport_time.end_of_month.day - task.transport_time.day
+            - else
+              - day = Time.now.day - trak.transport_time.day
+            = t 'task.finish_left', :day=>"#{task.task_day - day}"
         %td= convert_yes_no(task.custom_judge)
         %td= task.avoid_day
         %td= (distance_of_time_in_words task.published_time, Time.now) + t('global.before')
