--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -129,7 +129,7 @@
             - if Time.now.month - task.transport_time.month != 0
               - day = Time.now.day + task.transport_time.end_of_month.day - task.transport_time.day
             - else
-              - day = Time.now.day - trak.transport_time.day
+              - day = Time.now.day - task.transport_time.day
             = t 'task.finish_left', :day=>"#{task.task_day - day}"
         %td= convert_yes_no(task.custom_judge)
         %td= task.avoid_day
