--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -15,11 +15,11 @@
   = @message.title
 %p
   %b= t 'formtastic.labels.message.content'
-  %br
-  = raw @message.content
+  .solidshape
+    = raw @message.content
 %p
   %b= t 'formtastic.labels.message.priority'
   = @message.priority
 %p
   %b= t 'formtastic.labels.message.status'
-  = @message.status
+  = @message.local_status
