--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -364,3 +364,26 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
 }
 .customer_service li a{padding:8px 20px 8px 0;width:160px;float:left;background:url(/images/arrow-right.gif) right 12px no-repeat;text-decoration:none;color:#294f88}
 .customer_service li a:hover{background-image:url(/images/arrow-right-dark.gif)}
+
+/* table sorter style */
+table.tablesorter thead tr .header {
+  /*background-image: url(/images/bg.gif);*/
+  background-repeat: no-repeat;
+  background-position: center right;
+  cursor: pointer;
+}
+table.tablesorter tbody tr:hover {
+  /*background: #dfeef9;*/
+  background: #e6edf5;
+}
+table.tablesorter thead tr .headerSortUp {
+  background-image: url(/images/asc.gif);
+}
+table.tablesorter thead tr .headerSortDown {
+  background-image: url(/images/desc.gif);
+}
+table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
+  padding-right: 20px;
+  background-color: #a3c0ea;
+  color: white;
+}
